--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 ### Database ###
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/sport-app?useLegacyDatetimeCode=false&serverTimezone=Europe/Warsaw&sslMode=DISABLED
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.show-sql=true
+### Disable oauth ###
+security.ignored=/**
